improve code cuality

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             <p>Telegram: <span>@Filipondios</span> | Discord: <span>@Filipondios</span> | GitHub: <a href="https://github.com/filipondios" target="_blank">filipondios</a></p>
         </footer>
     </div>
-	<script src="pages/main.js?v=07.02.2026"></script>
+	<script src="pages/graph.js?v=07.02.2026"></script>
+    <script src="pages/countdown.js?v=07.02.2026"></script>
 </body>
 </html>
 
